traffic/vm-with-sidecar/generated-files/se.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: nginx
  namespace: istio-demo
spec:
  hosts:
  - nginx.example.com
    #- xxx.istio-demo.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - name: http
    number: 80
    protocol: HTTP
  resolution: STATIC
  workloadSelector:
    labels:
      app: nginx
