traffic/vm-with-sidecar/generated-files/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: istio-demo
  name: nginx-dr
spec:
  host: nginx.example.com
  subsets:
    - name: vm
      labels:
        class: vm
    - name: docker
      labels:
        class: docker
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: istio-demo
  name: nginx-vs
spec:
  hosts:
    - nginx.example.com
  http:
    - name: http-nginx-route
      route:
        - destination:
            host: nginx.example.com
            subset: vm
          weight: 100
        - destination:
            host: nginx.example.com
            subset: docker
          weight: 0
